--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ file(GLOB C_SOURCES "src/*.c")
 file(GLOB C_SUBFOLDER_SOURCES "src/**/*.c")
 set(includes_dir "includes/")
 
-add_executable(GL_GLFW_TEMPLATE WIN32 ${CPP_SOURCES} ${CPP_SUBFOLDER_SOURCES} ${C_SOURCES} ${C_SUBFOLDER_SOURCES} ${H_SOURCES})
+add_executable(GL_GLFW_TEMPLATE ${CPP_SOURCES} ${CPP_SUBFOLDER_SOURCES} ${C_SOURCES} ${C_SUBFOLDER_SOURCES} ${H_SOURCES})
 
 add_subdirectory(glm)
 target_link_libraries(GL_GLFW_TEMPLATE glm)
@@ -29,15 +29,6 @@ add_library("gl3w" "${gl3w_dir}/src/gl3w.c")
 target_include_directories("gl3w" PRIVATE "${glw_dir}/")
 target_include_directories(GL_GLFW_TEMPLATE PRIVATE "${gl3w_dir}/")
 target_link_libraries(GL_GLFW_TEMPLATE "gl3w" "${CMAKE_DL_LIBS}")
-
-if( MSVC )
-    SET( CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /ENTRY:mainCRTStartup" )
-endif()
-
-
- if( MSVC )
-    set_property( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT GL_GLFW_TEMPLATE)
-endif()
 
 include_directories(
   includes
